--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <Title>My Personal Website </Title>
     </head>
     <body>
-        <h1  style="color: gold;">Welcome To HiLCoE</h1>
+        <h1  style="color: gold;">Welcome To My Website</h1>
         <form action="" method="post">
             <fieldset> <legend><em><h1 style="color: white">Registration Form</h1></em></legend>
                 <table>
