--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                         <div class="about-content">
                             <div class="section-header text-left">
                                 <p>Learn About Me</p>
-                                <h2>10 Years Experience</h2>
+                                <h2>2 Years Experience</h2>
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
+                                    From an early age I’ve always been deeply interested in computing. It was my dad, introducing me to the computer systems at his work place that first sparked this interest. I can always remember the feeling of wanting to know just how computers worked, why they worked and what else they could do.   
                                 </p>
                             </div>
                             <div class="skills">
