--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="service-text">
                                 <h3>Web Design</h3>
                                 <p>
-                                  Ranging from   
+                                  Ranging from  web devs
                                 </p>
                             </div>
                         </div>
