--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
                         <div class="hero-image">
-                            <img src="#" alt="Hero Image">
+                            <img src="img/DSC_6503.JPG" alt="Hero Image">
                         </div>
                     </div>
                 </div>
